--- a/blocmetrics/Gemfile
+++ b/blocmetrics/Gemfile
@@ -3,6 +3,8 @@ source 'https://rubygems.org'
 gem 'haml-rails'
 gem 'chart-js-rails'
 gem 'pry'
+gem 'd3-rails'
+
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.8'
